--- a/数理モデル/整合の数理モデル.md
+++ b/数理モデル/整合の数理モデル.md
@@ -4,7 +4,7 @@
 
 構造主観力学（SSD）は、世界のあらゆる事象を「構造」と「意味圧」の相互作用として捉えます。その中でも**「整合」**、すなわち構造が意味圧に対して安定を保とうとするプロセスは、学習、快・不快、疲労といった人間心理の根幹をなす現象と深く結びついています。
 
-本稿では、この複雑な「整合」の力学を、電気回路のオーム則をアナロジーとした、観測可能で定量的な数理モデルとして記述する試みを解説します。まず基本的な線形モデルを示し、次に回避、漏れ、多重構造の衝突といった、より複雑な現象を扱うための拡張モデルを提示します。
+本稿では、この複雑な「整合」の力学を、電気回路のオーム則をアナロジーとした、観測可能で定量的な数理モデルとして記述する試みを解説します。
 
 ---
 
@@ -14,297 +14,237 @@
 
 ### 基本変数の定義
 
-- **意味圧**: 電気回路における電圧に相当し、記号 `p(t)` で表されます。これは構造に作用する入力や課題を意味します。
-- **整合（反応）**: 電気回路における電流に相当し、記号 `j(t)` で表されます。これは意味圧に対する構造の応答や出力を意味します。
-- **動きにくさ**: 電気回路における抵抗に相当し、記号 `R(t)` で表されます。これは整合の困難さやコストを意味します。
-- **通りやすさ**: 電気回路におけるコンダクタンスに相当し、記号 `G(t)` で表されます。これは整合の容易さを示し、抵抗の逆数（G=1/R）です。
+- **意味圧**: $p(t)$ - 構造に作用する入力や課題（電圧に相当）
+- **整合（反応）**: $j(t)$ - 意味圧に対する構造の応答（電流に相当）
+- **動きにくさ**: $R(t)$ - 整合の困難さやコスト（抵抗に相当）
+- **通りやすさ**: $G(t) = \frac{1}{R(t)}$ - 整合の容易さ（コンダクタンスに相当）
 
 ### 基本関係式
 
-```
-j(t) = G(t) · p(t) = p(t) / R(t)
-```
+$$j(t) = G(t) \cdot p(t) = \frac{p(t)}{R(t)}$$
 
-この単純な関係式が全てのモデルの出発点となります。すなわち、意味圧（p）が大きく、通りやすさ（G）が大きいほど、大きな整合（j）が生まれることを示します。
+この単純な関係式が全てのモデルの出発点となります。
 
 ---
 
 ## 3. モデルA：動的抵抗モデル（学習と疲労の分離）
 
-このモデルでは、「抵抗 R(t)」を、性質の異なる二つの要素の和として捉えます。
+このモデルでは、「抵抗 $R(t)$」を、性質の異なる二つの要素の和として捉えます。
 
-```
-R(t) = R_slow(t) + R_fast(t)
-```
+$$R(t) = R_{\text{slow}}(t) + R_{\text{fast}}(t)$$
 
-### 3.1. 学習による抵抗変化 R_slow（可塑性・長期変化）
+### 3.1. 学習による抵抗変化 $R_{\text{slow}}$（可塑性・長期変化）
 
-R_slow は、学習や習慣化によってゆっくりと変化する、構造の根本的な「通りやすさ」を表します。
+$R_{\text{slow}}$ は、学習や習慣化によってゆっくりと変化する、構造の根本的な「通りやすさ」を表します。
 
-```
-dR_slow/dt = -η · S(t) + λ · (R_∞ - R_slow)
-```
+$$\frac{dR_{\text{slow}}}{dt} = -\eta \cdot S(t) + \lambda \cdot (R_\infty - R_{\text{slow}})$$
+
+**パラメータ説明：**
+- $\eta > 0$：学習率（整合成功時の抵抗減少率）
+- $\lambda > 0$：忘却率（未使用時の抵抗増加率）
+- $S(t)$：整合の成功度合い
+- $R_\infty$：基準抵抗値
 
 #### 学習効果
-整合に成功する（有効な反応 S(t) が起きる）と、その量に応じて抵抗が減少（-η）します。これが**「学習すれば楽になる」**状態です。
+整合に成功する（$S(t) > 0$）と、その量に応じて抵抗が減少します。これが**「学習すれば楽になる」**状態です。
 
 #### 忘却効果
-整合が行われない期間が続くと、抵抗は元の基準値（R_∞）に向かってゆっくりと増加（+λ）します。これは**「使わないと忘れる（経路の優位性が低下する）」**状態を表します。
+整合が行われない期間が続くと、抵抗は元の基準値に向かって増加します。これは**「使わないと忘れる」**状態を表します。
 
-### 3.2. 疲労による抵抗変化 R_fast（熱負荷・短期変化）
+### 3.2. 疲労による抵抗変化 $R_{\text{fast}}$（熱負荷・短期変化）
 
-R_fast は、高負荷な活動によって一時的に増大し、休息によって回復する抵抗成分です。
+$R_{\text{fast}}$ は、高負荷な活動によって一時的に増大し、休息によって回復する抵抗成分です。
 
-```
-dR_fast/dt = κ · P(t) - (1/τ_rec) · R_fast(t)
-```
+$$\frac{dR_{\text{fast}}}{dt} = \kappa \cdot P(t) - \frac{1}{\tau_{\text{rec}}} \cdot R_{\text{fast}}(t)$$
+
+**パラメータ説明：**
+- $\kappa > 0$：疲労蓄積係数
+- $P(t) = j(t)^2 R(t)$：消費パワー
+- $\tau_{\text{rec}} > 0$：回復時定数
 
 #### 疲労蓄積
-整合に伴い消費されるエネルギー（パワー P(t) = j(t)²R(t)）に比例して、抵抗が瞬間的に増加（+κ）します。これが**「疲労」**です。
+整合に伴い消費されるエネルギー $P(t)$ に比例して、抵抗が増加します。
 
 #### 休息回復
-負荷がかからない状態では、抵抗は時定数 τ_rec に従って指数関数的に減少します。これが**「休息による回復」**です。
+負荷がかからない状態では、抵抗は指数関数的に減少します。
 
 ---
 
-## 4. モデルB：慣性更新モデル（パワーバランスに基づく統合的アプローチ）
-
-モデルAをより抽象化し、パワーバランスに着目して「通りやすさ」そのものの変化を直接記述するモデルです。
+## 4. モデルB：慣性更新モデル（パワーバランス統合アプローチ）
 
 ### 4.1. 基本モデル（単線モデル）
 
-#### 整合慣性 κ と整合流 j
+#### 整合慣性 $\kappa$ と整合流 $j$
 
-「通りやすさ」を整合慣性 κ(t) という指標で直接モデル化します。慣性が高いほど、通りやすい（コンダクタンスが高い）状態です。
+「通りやすさ」を整合慣性 $\kappa(t)$ で直接モデル化します。
 
-```
-整合流: j(t) = (G₀ + g · κ(t)) · p(t)
-```
+$$j(t) = (G_0 + g \cdot \kappa(t)) \cdot p(t)$$
 
-ここで G₀ は基本コンダクタンス、g は慣性の影響係数です。
+**パラメータ説明：**
+- $G_0 > 0$：基本コンダクタンス
+- $g > 0$：慣性の影響係数
+- $\kappa(t) \geq \kappa_{\min}$：整合慣性
 
 #### パワーバランスと慣性更新
 
-```
-Ẇ_align(t) = 入力パワー p(t)j(t) - 熱損失 (ρj(t)² + σp(t)²)
+整合仕事を以下のように定義します：
 
-dκ/dt = η · Ẇ_align(t) - λ · (κ(t) - κ_min)
-```
+$$\dot{W}_{\text{align}}(t) = p(t)j(t) - \rho j(t)^2 - \sigma p(t)^2$$
 
-- **Ẇ_align(t)**: 構造の更新に使われる正味の整合仕事。入力パワーから熱損失を引いたもので、これが「快」の源泉とみなせます。
-- **慣性更新**:
-  - 整合に成功して Ẇ_align > 0 となれば、慣性 κ は増加します（学習）。
-  - 長期間使われないと、慣性 κ は忘却係数 λ に従って下限値 κ_min へと減衰していきます（忘却）。このモデルは、「忘却は完全な消去ではなく、最低限のレベルは残る」というSSDの記憶モデルと整合します。
+慣性の更新則：
+
+$$\frac{d\kappa}{dt} = \eta \cdot \dot{W}_{\text{align}}(t) - \lambda \cdot (\kappa(t) - \kappa_{\min})$$
+
+**パラメータ説明：**
+- $\dot{W}_{\text{align}}(t)$：正味の整合仕事（「快」の源泉）
+- $\rho, \sigma > 0$：熱損失係数
+- $\eta > 0$：学習効率
+- $\lambda > 0$：忘却率
+- $\kappa_{\min} > 0$：慣性の下限値
 
 ### 4.2. 整合効率と慣性成長の関係
 
-学習曲線は二つの側面を持ちます。
+学習曲線の特性を分析できます：
 
-#### 初期（低効率）
-多くのエネルギーを消費するため熱損失は大きいですが、Ẇ_align が正になりやすく、慣性 κ が急成長します。
+- **初期（低効率）**：$\dot{W}_{\text{align}} > 0$ となりやすく、$\kappa$ が急成長
+- **熟練期（高効率）**：$\dot{W}_{\text{align}} \approx 0$ となり、$\kappa$ の成長が鈍化
 
-#### 熟練期（高効率）
-省エネルギーで整合できるため快適ですが、Ẇ_align ≈ 0 となり、慣性 κ の成長は鈍化し飽和します。
-
-**命題**: 構造慣性の成長速度は、効率の向上に伴い緩やかになる。効率化は安定をもたらすが、新たな学習は抑制されうる。
+**命題**: 構造慣性の成長速度は、効率の向上に伴い緩やかになる。
 
 ---
 
 ## 5. モデルの拡張：複合的な力学
 
-単線モデルでは説明できない複雑な現象に対応するため、モデルを拡張します。
+### 5.1. 回避整合慣性モデル
 
-### 5.1. 回避整合慣性モデル：行動の阻害
+接近と回避の二重経路を考慮したモデル：
 
-人間には、目標に向かう「接近」の整合経路とは別に、生得的に（基層構造に）「回避」のための整合経路が用意されていると考えられます。
+$$j_{\text{total}}(t) = j_{\text{approach}}(t) - j_{\text{avoidance}}(t)$$
 
-#### 回避の情報処理プロセス
+$$j_{\text{approach}}(t) = (G_0^+ + g^+ \kappa_+(t)) \cdot p(t)$$
 
-1. **記録の参照**: 新しい意味圧 p(t) が入力されると、構造はまず過去の整合記録（記憶）を参照します。
-2. **パターン分類**: その意味圧が、過去に「整合不能」や「大きな不快」をもたらした難題のパターンと類似していると判断された場合、「この課題は回避すべきである」という情報が生成されます。
-3. **経路選択**: この判断に基づき、エネルギーは意図的に「接近経路」から「回避経路」へと振り分けられます。
+$$j_{\text{avoidance}}(t) = (G_0^- + g^- \kappa_-(t)) \cdot p(t)$$
 
-#### 回避整合慣性の特性
+**特徴：**
+- $\kappa_+(t)$：接近整合慣性
+- $\kappa_-(t)$：回避整合慣性  
+- 回避が優位になると行動が阻害される
 
-回避整合慣性 (κ₋) は、「ある種の難題に対して、回避という選択肢が取られる優先度や確率」を示すパラメータと解釈できます。
+### 5.2. 漏れ流（バイパス）モデル
 
-実際の行動は、接近と回避の力の差し引きとして現れ、回避の優先度が高いと、課題への行動は阻害されます。
+課題に無関係な経路への散逸を考慮：
 
-#### 回避経路の三つの特性
+$$P_{\text{in,total}} = p(t) \cdot (j_{\text{approach}}(t) + b(t))$$
 
-1. **省エネ戦略としての合理性**: 回避は、真正面から取り組んだ際に予測される、より大きなエネルギー消費（整合不能による不快や消耗）を未然に防ぐための、合理的な予測に基づいた省エネ戦略です。
+$$\dot{Q}_{\text{heat}} = \rho j_{\text{approach}}^2 + \sigma_b b^2$$
 
-2. **基層由来の強力な慣性**: 生命の安全を守るという基層構造（本能）に根差しているため、この経路は生まれつき備わった、極めて強力で優先度の高いデフォルトの反応となります。
-
-3. **「達成快」の不在**: 課題を乗り越えた際の「快」（正味の整合仕事 Ẇ_align > 0）は生まれません。しかし、不快な状況から逃れることによる「安堵感」は発生します。
-
-### 5.2. 漏れ流（バイパス）モデル：手応えのない疲労
-
-「漏れ流」とは、「接近」とも「回避」とも異なる、課題に無関係な経路へエネルギーが散逸してしまう現象です。
-
-```
-総入力パワー: P_in_total = p(t) · (j_approach(t) + b(t))
-熱損失: Q̇_heat ≈ ρj_approach² + σ_b b²
-```
-
-この経路 b(t) では、課題解決という「整合仕事」は行われないため、エネルギーは消費されても成果は上がらず、熱損失だけが蓄積します。これが「手応えのない疲労」の力学的な説明となります。
-
-### 5.3. 多重構造の衝突
-
-SSDの四層構造（物理、基層、中核、上層）がそれぞれ異なる目標方向を持つ場合、ある層での整合が、別の層では非整合（不快）となり、回避という判断が生まれやすくなります。これは「動いているのに進まない」という内部葛藤の状態をモデル化します。
+**特徴：**
+- $b(t)$：漏れ流（課題無関係な活動）
+- エネルギーは消費されるが成果は上がらない
+- 「手応えのない疲労」の原因
 
 ---
 
-## 6. 実践的なモデリング手順
+## 6. パラメータ設定ガイド
 
-複雑な現象を分析する際は、以下の段階的アプローチを推奨します。
+### 6.1. 基本パラメータ一覧
 
-### 第1段階：単線モデルで分析
-まずは最もシンプルなモデル（4.1節）で対象の挙動を捉え、KPI（整合効率 j/p, 熱損失 Q̇_heat など）を監視します。
+| 記号 | 既定値 | 範囲 | 物理的意味 |
+|------|--------|------|-----------|
+| $G_0$ | 0.5 | 0.1–1.0 | 基本通りやすさ |
+| $g$ | 0.7 | 0.2–1.5 | 慣性の影響度 |
+| $\eta$ | 0.3 | 0.1–0.5 | 学習効率 |
+| $\lambda$ | 0.02 | 0.005–0.05 | 忘却率 |
+| $\rho$ | 0.1 | 0.05–0.2 | 抵抗損失係数 |
+| $\sigma$ | 0.05 | 0.01–0.1 | 入力損失係数 |
+| $\kappa_{\min}$ | 0.1 | 0.05–0.2 | 慣性下限値 |
 
-### 第2段階：複合モデルへ拡張（必要に応じて）
-単線モデルで説明できない現象が見られた場合にのみ、必要なモジュールを最小限で追加します。
+### 6.2. チューニング指針
 
-- **入力が増えても反応が頭打ち** → 並列整合（代替ルート）の導入
-- **行動が阻害される、進まない** → 回避整合慣性モデルの導入
-- **手応えなく疲れる、消耗する** → 漏れ流モデルの導入
-- **目的のズレが疑われる** → 多重構造の目標方向を分析
+#### システムが硬直・単調な場合
+- $G_0 \uparrow, g \uparrow$：基本的な通りやすさ向上
+- $\eta \uparrow$：学習効率向上  
+- $\lambda \downarrow$：忘却遅延
 
----
-
-## 7. パラメータの設定と調整
-
-### 7.1. 基本パラメータの目安
-
-| 記号 | 既定 | 範囲 | 意味 |
-|------|------|------|------|
-| G₀ | 0.5 | 0.1–1.0 | 基本通りやすさ |
-| g | 0.7 | 0.2–1.5 | κの影響係数 |
-| η | 0.3 | 0.1–0.5 | 学習率（成功時Δκ） |
-| λ | 0.02 | 0.005–0.05 | 忘却（未使用減衰） |
-| α | 0.6 | 0.2–1.0 | 熱の蓄積係数 |
-| β | 0.15 | 0.05–0.3 | 熱の自然減衰 |
-| ρ | 0.1 | 0.05–0.2 | 抵抗による熱損失係数 |
-| σ | 0.05 | 0.01–0.1 | 入力による熱損失係数 |
-| κ_min | 0.1 | 0.05–0.2 | 慣性の最小値 |
-
-*数値は目安。実際の適用では、対象システムの特性に合わせてスケーリングが必要。*
-
-### 7.2. チューニング指針
-
-#### システムが硬直して単調な場合
-- G₀↑, g↑（基本的な通りやすさを向上）
-- η↑（学習効率を向上）
-- λ↓（忘却を遅延）
-
-#### システムが不安定で一貫性がない場合
-- ρ↑（失敗ペナルティを強化）
-- σ↑（入力負荷を調整）
-- κ_min↑（最低限の安定性を確保）
-
-#### 学習が進まない場合
-- η↑（学習率を向上）
-- β↑（疲労回復を促進）
-- 回避経路の調整を検討
+#### システムが不安定な場合
+- $\rho \uparrow$：失敗ペナルティ強化
+- $\sigma \uparrow$：入力負荷調整
+- $\kappa_{\min} \uparrow$：最低安定性確保
 
 ---
 
-## 8. 応用例とシミュレーション
+## 7. シミュレーション例
 
-### 8.1. 学習曲線のシミュレーション
+### 7.1. 学習曲線のモデル化
 
-基本モデルを用いて、典型的な学習プロセスをシミュレートできます：
+典型的な学習プロセス：
 
-```
-初期状態: κ(0) = κ_min, p(t) = 一定
-期待結果: 
-- 初期: j(t)低、熱損失大、κ急成長
-- 中期: j(t)増加、効率向上、κ成長鈍化
-- 後期: j(t)高、熱損失小、κ飽和
-```
+```python
+# 初期条件
+kappa_0 = kappa_min
+p_const = 1.0
 
-### 8.2. 疲労・回復サイクル
-
-動的抵抗モデルを用いて、作業負荷と休息の最適バランスを分析：
-
-```
-高負荷期: R_fast増大 → j(t)低下 → 作業効率悪化
-休息期: R_fast減衰 → j(t)回復 → 作業効率改善
+# 期待される時間発展
+# t=0-100:   kappa急成長, j増加, 熱損失大
+# t=100-300: kappa成長鈍化, j安定, 効率向上  
+# t=300-:    kappa飽和, j高位安定, 熱損失小
 ```
 
-### 8.3. 多重課題環境での行動予測
+### 7.2. 疲労・回復サイクル
 
-複数の意味圧源がある環境での行動パターンを予測：
+作業負荷パターンの分析：
 
-```
-課題A: 接近経路が強い → 積極的取り組み
-課題B: 回避経路が強い → 消極的対応
-課題C: 漏れ流経路 → エネルギー散逸
-```
+$$R_{\text{fast}}(t) = R_0 e^{-t/\tau_{\text{rec}}} + \kappa \int_0^t P(\tau) e^{-(t-\tau)/\tau_{\text{rec}}} d\tau$$
+
+**応用：** 最適な作業・休息比の導出
 
 ---
 
-## 9. モデルの検証と妥当性
+## 8. 実践的モデリング手順
 
-### 9.1. 定性的妥当性
+### 段階的アプローチ
 
-#### 学習現象との整合性
-- ✅ 練習による改善（κ増大）
-- ✅ 忘却による劣化（κ減衰）
-- ✅ 過負荷による効率低下（R_fast増大）
+**第1段階：** 単線モデル（4.1節）で基本挙動を把握
+- KPI: 整合効率 $j/p$, 熱損失 $\dot{Q}_{\text{heat}}$
 
-#### 心理現象との整合性
-- ✅ 達成感の発生（Ẇ_align > 0時）
-- ✅ 燃え尽きの発生（継続的な高負荷）
-- ✅ 回避行動の合理性
+**第2段階：** 必要に応じて拡張
+- **反応頭打ち** → 並列整合モデル
+- **行動阻害** → 回避整合慣性モデル  
+- **手応えなき疲労** → 漏れ流モデル
+- **目的齟齬** → 多重構造分析
+
+---
+
+## 9. モデル検証
+
+### 9.1. 定性的妥当性チェック
+
+- ✅ 練習効果（$\kappa$ 増大）
+- ✅ 忘却現象（$\kappa$ 減衰）
+- ✅ 疲労蓄積（$R_{\text{fast}}$ 増大）
+- ✅ 達成感（$\dot{W}_{\text{align}} > 0$ 時）
 
 ### 9.2. 定量的検証の方向性
 
-#### 実験データとの比較
-- 学習曲線の形状比較
-- 疲労回復時間の測定
-- 課題難易度と行動選択の関係
-
-#### 既存理論との接続
-- 学習心理学の知見との対照
-- 認知負荷理論との統合
-- 動機づけ理論との比較
+- 学習曲線データとの fitting
+- 疲労回復時間の実測比較
+- 認知負荷理論との接続
+- 個体差パラメータの同定
 
 ---
 
-## 10. 限界と今後の発展
+## 10. 結論
 
-### 10.1. 現在のモデルの限界
+SSDの整合数理モデルは：
 
-#### 個体差の扱い
-現在のモデルは平均的な挙動を記述するが、個体差や文化差の説明は限定的。
+1. **オーム則の直感的理解** から出発
+2. **学習・疲労・快不快** を統一的に記述
+3. **回避・漏れ・多重衝突** まで拡張可能
+4. **実装・シミュレーション** に直結
 
-#### 非線形現象
-複雑な相互作用や創発的現象の完全な記述には更なる拡張が必要。
+最も重要なのは、感情的・主観的な「整合」体験を、**客観的で測定可能な力学プロセス**として扱えるようにする点です。
 
-#### パラメータの同定
-実際のシステムでのパラメータ値の客観的測定方法の確立が課題。
-
-### 10.2. 今後の発展方向
-
-#### 確率的要素の導入
-決定論的モデルから確率的モデルへの拡張。
-
-#### 多層構造の統合
-SSD四層構造を明示的に組み込んだより包括的なモデル。
-
-#### 機械学習との融合
-データ駆動型アプローチとの組み合わせによる予測精度向上。
-
----
-
-## 結論
-
-SSDの「整合」の数理モデルは、オーム則というシンプルなアナロジーを起点としながら、学習、疲労、快・不快といった基本的な心理現象を定量的に記述します。さらに、回避判断、漏れ流、多重構造の衝突といった概念を導入することで、より複雑な内部葛藤や行動の阻害といった現実的な問題へと分析の射程を広げることができます。
-
-これらはあくまで世界の複雑さを捉えるための最小モデルですが、シミュレーションや実データへの適用を通じて、人間の行動や心理を予測・分析するための強力なツールとなる可能性を秘めています。
-
-最も重要なのは、このモデルが「整合」という現象を、感情的・主観的な体験としてではなく、客観的で測定可能な力学的プロセスとして扱えるようにする点です。これにより、教育、組織運営、個人の成長といった様々な分野で、より科学的で効果的なアプローチが可能になるのです。
+これにより、教育・組織運営・個人成長の各分野で、より科学的で効果的なアプローチが可能になります。
 
 ---
 
