--- a/数理モデル/整合跳躍数理モデル.md
+++ b/数理モデル/整合跳躍数理モデル.md
@@ -1,147 +1,344 @@
-# SSD：整合慣性 × ランダム接続 — 跳躍の最小ハイブリッドモデル
+# SSD：整合慣性×ランダム接続 — 跳躍の最小ハイブリッドモデル
 
 ## 0. 目的と要約
-- **目的**：整合（決定論・省エネ）と、跳躍（確率論・接続拡張）を単一の時間発展で統合する。
+
+- **目的**：整合（決定論・省エネ）と、跳躍（確率論・接続拡張）を単一の時間発展で統合する
 - **要約**：
-  - 既存の整合回路（オーム則アナロジー）に、未処理圧リザーバEを導入。
-  - Eが閾値を超えると**制約付きランダム接続**でネットワークを再配線（跳躍）。
-  - 跳躍後は放熱（E減衰）と慣性調整で再び整合へ。硬直化すれば温度T↑で探索を増やす。
+  - 既存の整合回路（オーム則アナロジー）に、未処理圧リザーバ $E$ を導入
+  - $E$ が閾値を超えると**制約付きランダム接続**でネットワークを再配線（跳躍）
+  - 跳躍後は放熱（$E$ 減衰）と慣性調整で再び整合へ
+  - 硬直化すれば温度 $T \uparrow$ で探索を増やす
 
 ---
 
 ## 1. 状態と変数
-- 構造ネットワーク：\(G=(\mathcal{S},\mathcal{E}, w)\)（ノード=概念、エッジ重み\(w_{ij}\)）
-- 整合慣性：\(\kappa_{ij}(t)\)（経路の通りやすさ／記憶）
-- 入力（意味圧）：\(p(t)\)（課題ベクトル or スカラー）
-- 未処理圧リザーバ：\(E(t)\)（整合不能の蓄積＝“熱”）
-- 温度：\(T(t)\)（探索の強さ）
+
+### 1.1. 基本構造
+- **構造ネットワーク**：$G = (\mathcal{S}, \mathcal{E}, w)$
+  - $\mathcal{S}$：ノード集合（概念・戦術）
+  - $\mathcal{E}$：エッジ集合（接続関係）
+  - $w_{ij}$：エッジ重み
+
+### 1.2. 動的変数
+- **整合慣性**：$\kappa_{ij}(t)$ - 経路の通りやすさ／記憶
+- **入力（意味圧）**：$p(t)$ - 課題ベクトル or スカラー
+- **未処理圧リザーバ**：$E(t)$ - 整合不能の蓄積（"熱"）
+- **温度**：$T(t)$ - 探索の強さ
 
 ---
 
 ## 2. 連続部：整合ダイナミクス
-**通りやすさ**：\(G_{ij}(t)=G_{0,ij}+g\,\kappa_{ij}(t)\)
 
-**整合流**（ネットワーク版オーム則）
-\[
- j_{ij}(t)=G_{ij}(t)\,a_{ij}(t),\quad a_{ij}(t)=\langle\phi_i,p(t)\rangle-\langle\phi_j,p(t)\rangle
-\]
-（単純化：\(a_{ij}(t)=p(t)\)可）
+### 2.1. 通りやすさの定義
 
-**整合仕事（正味）**
-\[
- \dot W_{\text{align}}(t)=\sum_{(i,j)}\big(p(t)\,j_{ij}-\rho\, j_{ij}^2\big)
-\]
+$$G_{ij}(t) = G_{0,ij} + g \cdot \kappa_{ij}(t)$$
 
-**慣性更新（学習・忘却）**
-\[
- \dot\kappa_{ij}=\eta\,\big[p(t)\,j_{ij}-\rho\,j_{ij}^2\big]-\lambda(\kappa_{ij}-\kappa_{\min})
-\]
+**パラメータ説明：**
+- $G_{0,ij}$：基本通りやすさ
+- $g > 0$：慣性の影響係数
+
+### 2.2. 整合流（ネットワーク版オーム則）
+
+$$j_{ij}(t) = G_{ij}(t) \cdot a_{ij}(t)$$
+
+$$a_{ij}(t) = \langle\phi_i, p(t)\rangle - \langle\phi_j, p(t)\rangle$$
+
+**簡略版：**
+$$a_{ij}(t) = p(t)$$
+
+### 2.3. 整合仕事（正味）
+
+$$\dot{W}_{\text{align}}(t) = \sum_{(i,j)} \left( p(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 \right)$$
+
+**パラメータ説明：**
+- 第1項：入力パワー
+- 第2項：抵抗損失（$\rho > 0$）
+
+### 2.4. 慣性更新（学習・忘却）
+
+$$\frac{d\kappa_{ij}}{dt} = \eta \left[ p(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 \right] - \lambda(\kappa_{ij} - \kappa_{\min})$$
+
+**パラメータ説明：**
+- $\eta > 0$：学習率
+- $\lambda > 0$：忘却率
+- $\kappa_{\min} \geq 0$：慣性の下限値
 
 ---
 
 ## 3. 未処理圧の蓄積（整合不能の計上）
-\[
- \dot E=\alpha\,[\,\|p(t)\|-\|J(t)\|\,]_+ - \beta\,E\quad (\,\|J\|:=\sqrt{\sum j_{ij}^2}\,)
-\]
-- 整合が追いつかない差分を“熱”として貯蔵。
+
+$$\frac{dE}{dt} = \alpha \left[ \|p(t)\| - \|J(t)\| \right]_+ - \beta E$$
+
+**記号説明：**
+- $\|J(t)\| := \sqrt{\sum_{ij} j_{ij}^2}$：総整合流のノルム
+- $[x]_+ := \max(x, 0)$：正の部分のみ
+- $\alpha > 0$：蓄積係数
+- $\beta > 0$：自然減衰係数
+
+**物理的意味：** 整合が追いつかない差分を"熱"として貯蔵
 
 ---
 
 ## 4. 跳躍トリガ（確率的発火）
-発火強度（ポアソン過程）：
-\[
- h(t)=h_0\,\exp\!\Big(\frac{E(t)-\Theta(t)}{\gamma}\Big),\qquad
- \Theta(t)=\Theta_0 + a_1\,\bar{\kappa}(t)-a_2\,F(t)
-\]
-- \(\bar{\kappa}\)：平均慣性（高いほど跳びにくい）
-- \(F\)：疲労などの可逆指標（高いほど跳びやすい）
-- 発火確率（ステップ幅\(\Delta t\)）：\(1-\exp(-h\,\Delta t)\)
+
+### 4.1. 発火強度（ポアソン過程）
+
+$$h(t) = h_0 \exp\left(\frac{E(t) - \Theta(t)}{\gamma}\right)$$
+
+### 4.2. 動的閾値
+
+$$\Theta(t) = \Theta_0 + a_1 \bar{\kappa}(t) - a_2 F(t)$$
+
+**パラメータ説明：**
+- $\bar{\kappa}(t) = \frac{1}{|\mathcal{E}|} \sum_{ij} \kappa_{ij}(t)$：平均慣性
+- $F(t)$：疲労などの可逆指標
+- $a_1 > 0$：慣性が高いほど跳びにくい
+- $a_2 > 0$：疲労が高いほど跳びやすい
+
+### 4.3. 発火確率
+
+微小時間 $\Delta t$ での発火確率：
+
+$$P_{\text{jump}}(\Delta t) = 1 - \exp(-h(t) \cdot \Delta t)$$
 
 ---
 
 ## 5. 跳躍：制約付きランダム接続（構造依存＋ノイズ）
-候補集合 \(\mathcal{C}\) から、新規接続先 \(k\) を確率分布で選択：
-\[
- \pi(k\mid s,t) \propto \exp\!\Big(\frac{\underbrace{\mathrm{sim}(s,k)}_{\text{構造依存}} + \underbrace{\xi_k}_{\text{ノイズ}}}{T(t)}\Big),\quad \xi_k\sim\mathcal{N}(0,\sigma^2)
-\]
-- \(T(t)=T_0+c_1E(t)-c_2\,H(\pi_{t^-})\)：**探索温度**（熱↑／ポリシーのエントロピー低↓で温度↑）
-- 選ばれたエッジの追加・強化：
-\[
- w_{sk}\leftarrow w_{sk}+\Delta w,\qquad \kappa_{sk}\leftarrow \kappa_{sk}+\Delta\kappa^{(+)}
-\]
-- 過飽和の主経路は微緩和（硬直ほぐし）：
-\[
- \kappa_{ij}\leftarrow \kappa_{ij}-\epsilon\cdot \mathbb{I}\{j_{ij}\text{が上位}q\%\}
-\]
-- 放熱：\(E\leftarrow c_0E\;(0\le c_0<1)\)
+
+### 5.1. 候補選択の確率分布
+
+候補集合 $\mathcal{C}$ から、新規接続先 $k$ を以下の確率で選択：
+
+$$\pi(k \mid s, t) \propto \exp\left(\frac{\text{sim}(s,k) + \xi_k}{T(t)}\right)$$
+
+**成分説明：**
+- $\text{sim}(s,k)$：構造依存の類似度
+- $\xi_k \sim \mathcal{N}(0, \sigma^2)$：ガウスノイズ
+- $T(t)$：探索温度
+
+### 5.2. 探索温度の動的調整
+
+$$T(t) = T_0 + c_1 E(t) - c_2 H(\pi_{t^-})$$
+
+**パラメータ説明：**
+- $T_0 > 0$：基本温度
+- $c_1 > 0$：熱による温度上昇
+- $c_2 > 0$：エントロピー低下による温度上昇
+- $H(\pi)$：政策エントロピー
+
+### 5.3. 接続の追加・強化
+
+選ばれたエッジの更新：
+
+$$w_{sk} \leftarrow w_{sk} + \Delta w$$
+$$\kappa_{sk} \leftarrow \kappa_{sk} + \Delta \kappa^{(+)}$$
+
+### 5.4. 硬直ほぐし（過飽和経路の微緩和）
+
+上位 $q\%$ の主経路に対して：
+
+$$\kappa_{ij} \leftarrow \kappa_{ij} - \epsilon \cdot \mathbb{I}\{j_{ij} \text{が上位} q\% \text{に該当}\}$$
+
+### 5.5. 放熱
+
+$$E \leftarrow c_0 E \quad (0 \leq c_0 < 1)$$
 
 ---
 
 ## 6. 硬直—創発バランサ
-- **硬直度**：\(H(\pi)\)（接続ポリシーのエントロピー）。下がりすぎたら \(T\) を底上げ。
-- **探索ノイズ**（\(\varepsilon\)-greedy）：
-\[
- \varepsilon(t)=\varepsilon_0 + d_1E - d_2\bar{\kappa}
-\]
-確率 \(\varepsilon\) で完全ランダム接続を混入。
+
+### 6.1. 硬直度の測定
+
+政策のエントロピー：
+
+$$H(\pi) = -\sum_k \pi(k) \log \pi(k)$$
+
+エントロピーが低下しすぎた場合、温度 $T$ を底上げ。
+
+### 6.2. 探索ノイズ（$\varepsilon$-greedy）
+
+$$\varepsilon(t) = \varepsilon_0 + d_1 E - d_2 \bar{\kappa}$$
+
+確率 $\varepsilon(t)$ で完全ランダム接続を混入。
+
+**パラメータ説明：**
+- $\varepsilon_0$：基本探索率
+- $d_1 > 0$：熱による探索増加
+- $d_2 > 0$：慣性による探索減少
 
 ---
 
 ## 7. 観測指標（ダッシュボード）
-- 整合効率：\(\eta_{\text{align}}=\|J\|/\|p\|\)
-- 放熱率：\(-\dot E\)
-- 政策エントロピー：\(H(\pi)\)
-- 新規接続率：\(|\delta\mathcal{E}|/\Delta t\)
-- 創造歩留まり：新接続のうち後続で \(\kappa\) が持続増加する割合
+
+### 7.1. 主要KPI
+
+| 指標 | 数式 | 意味 |
+|------|------|------|
+| **整合効率** | $\eta_{\text{align}} = \frac{\|J\|}{\|p\|}$ | 入力に対する有効出力の割合 |
+| **放熱率** | $-\frac{dE}{dt}$ | 熱の減少速度 |
+| **政策エントロピー** | $H(\pi) = -\sum_k \pi_k \log \pi_k$ | 探索の多様性 |
+| **新規接続率** | $\frac{|\delta\mathcal{E}|}{\Delta t}$ | 単位時間あたりの新接続数 |
+| **創造歩留まり** | $\frac{\text{持続する新接続}}{\text{総新接続}}$ | 新接続の定着率 |
+
+### 7.2. デバッグ用補助指標
+
+- 平均慣性：$\bar{\kappa}(t)$
+- 慣性分散：$\text{Var}[\kappa_{ij}]$
+- 接続密度：$\frac{|\mathcal{E}|}{|\mathcal{S}|^2}$
 
 ---
 
 ## 8. 擬似コード（逐次更新）
-```text
-for t in 0..T:
-  # 整合ステップ
-  compute j_ij = (G0_ij + g*kappa_ij) * a_ij(p)
-  W_align = sum(p*j_ij - rho*j_ij^2)
-  kappa_ij += eta*(p*j_ij - rho*j_ij^2) - lambda*(kappa_ij - kappa_min)
-  E += alpha*max(||p||-||J||,0) - beta*E
 
-  # 跳躍判定
-  Theta = Theta0 + a1*mean(kappa) - a2*F
-  h = h0*exp((E-Theta)/gamma)
-  if rand() < 1 - exp(-h*dt):
-      # 制約付きランダム接続
-      T = T0 + c1*E - c2*entropy(pi_prev)
-      sample k ~ pi(k|s,t) ∝ exp((sim(s,k) + noise)/T)
-      add edge (s,k): w_sk += Δw ; kappa_sk += Δkappa_plus
-      # 硬直ほぐし
-      for top-q% edges by j_ij: kappa_ij -= ε
-      # 放熱
-      E *= c0
+```python
+for t in range(T_max):
+    # === 整合ステップ（決定論的） ===
+    # 1. 整合流の計算
+    for (i, j) in edges:
+        j_ij = (G0[i,j] + g * kappa[i,j]) * a[i,j](p)
+    
+    # 2. 整合仕事と慣性更新
+    W_align = sum(p * j_ij - rho * j_ij**2 for all (i,j))
+    for (i, j) in edges:
+        kappa[i,j] += eta * (p * j_ij - rho * j_ij**2) - lambda_f * (kappa[i,j] - kappa_min)
+    
+    # 3. 未処理圧の蓄積
+    E += alpha * max(norm(p) - norm(J), 0) - beta * E
 
-  # ε-greedy（完全ランダム接続）
-  if rand() < (ε0 + d1*E - d2*mean(kappa)):
-      randomly add/rewire a weak edge
+    # === 跳躍判定（確率論的） ===
+    # 4. 閾値と発火強度
+    Theta = Theta0 + a1 * mean(kappa) - a2 * F
+    h = h0 * exp((E - Theta) / gamma)
+    
+    # 5. 跳躍実行
+    if random() < (1 - exp(-h * dt)):
+        # 探索温度の計算
+        T_explore = T0 + c1 * E - c2 * entropy(policy_prev)
+        
+        # 制約付きランダム接続
+        candidates = get_candidates(G, context)
+        k = sample_from_softmax(
+            [(sim(s, k) + noise()) / T_explore for k in candidates]
+        )
+        
+        # エッジの追加・強化
+        add_or_boost_edge(G, s, k, delta_w)
+        kappa[s, k] += delta_kappa_plus
+        
+        # 硬直ほぐし
+        top_edges = get_top_q_percent_edges_by_flow(G)
+        for edge in top_edges:
+            kappa[edge] -= epsilon_relax
+        
+        # 放熱
+        E *= c0
+
+    # === ε-greedy完全ランダム接続 ===
+    epsilon = epsilon0 + d1 * E - d2 * mean(kappa)
+    if random() < epsilon:
+        randomly_add_or_rewire_weak_edge(G)
 ```
 
 ---
 
 ## 9. 実験プロトコル（最小セット）
-1. **単一課題**：固定ベクトル \(p\) を入れて、E・T・H(π) の時間発展を観察。
-2. **課題系列**：局所相関が低い \(p_t\) を列投入→跳躍頻度と整合効率のトレードオフ計測。
-3. **硬直化テスト**：\(\lambda\downarrow\)（忘却遅延）で硬直を誘発→T制御の効果を検証。
-4. **創造歩留まり**：新規接続の持続率（\(\kappa\)増加）と分布（近傍vs遠方）を計測。
+
+### 9.1. 基本動作確認
+
+1. **単一課題テスト**
+   - 固定ベクトル $p$ を入力
+   - $E$, $T$, $H(\pi)$ の時間発展を観察
+
+2. **課題系列テスト**  
+   - 局所相関の低い $p_t$ を連続投入
+   - 跳躍頻度と整合効率のトレードオフを計測
+
+### 9.2. パラメータ調整実験
+
+3. **硬直化テスト**
+   - $\lambda \downarrow$（忘却遅延）で硬直を意図的に誘発  
+   - $T$ 制御の効果を検証
+
+4. **創造歩留まり測定**
+   - 新規接続の持続率（$\kappa$ 増加継続）を計測
+   - 分布（近傍 vs 遠方接続）を分析
 
 ---
 
 ## 10. 応用・解釈
-- **閃き**：Eが閾値を超え、遠方ノードと接続→新経路が学習で固定。
-- **暴走**：T過大やρ低下でノイズ優位→整合効率低下・熱暴走。
-- **冷静性**：β↑, c2↑（エントロピー低下検知で温度制御）で“必要な跳躍のみ”を残す。
+
+### 10.1. 心理現象のモデル化
+
+- **閃き**：$E$ が閾値超え → 遠方ノードと接続 → 新経路が学習で固定
+- **暴走**：$T$ 過大や $\rho$ 低下 → ノイズ優位 → 整合効率低下・熱暴走
+- **冷静性**：$\beta \uparrow$, $c_2 \uparrow$ → 必要な跳躍のみを残すバランス調整
+
+### 10.2. 教育・訓練への応用
+
+- **適応的難易度**：$E$ レベルに応じた課題提示
+- **創造性促進**：意図的な $T$ 制御による探索誘導
+- **燃え尽き防止**：$\beta$ パラメータによる適切な休息設計
 
 ---
 
-## 11. 次の拡張
-- 多主体の自己励起（Hawkes過程）で社会的カスケード。
-- ランドウ自由エネルギーによる相転移表示（\(F_S(\phi; p)\) の極小入れ替え）。
-- 物語生成への応用：跳躍＝プロット分岐、整合＝伏線回収の力学。
+## 11. パラメータチューニングガイド
 
+### 11.1. 典型的な問題と対策
+
+| 問題症状 | 可能性のある原因 | 推奨調整 |
+|----------|----------------|----------|
+| **硬直して単調** | 探索不足 | $T_0 \uparrow$, $\sigma \uparrow$, $\varepsilon_0 \uparrow$ |
+| **暴走して雑** | 探索過多 | $T_0 \downarrow$, $\rho \uparrow$, $c_2 \uparrow$ |
+| **過跳躍** | 閾値が低い | $\gamma \uparrow$, $\Theta_0 \uparrow$, $a_1 \uparrow$ |
+| **考えすぎで動かない** | 基本流量不足 | $g \uparrow$, $G_0 \uparrow$, $\beta_E \uparrow$ |
+
+### 11.2. パラメータの目安（ゲーム向け）
+
+| 記号 | 既定値 | 範囲 | 意味 |
+|------|--------|------|------|
+| $G_0$ | 0.5 | 0.1–1.0 | 基本通りやすさ |
+| $g$ | 0.7 | 0.2–1.5 | $\kappa$ の影響係数 |
+| $\eta$ | 0.3 | 0.1–0.5 | 学習率 |
+| $\lambda$ | 0.02 | 0.005–0.05 | 忘却率 |
+| $\alpha$ | 0.6 | 0.2–1.0 | 熱の蓄積係数 |
+| $\beta_E$ | 0.15 | 0.05–0.3 | 熱の自然減衰 |
+| $\Theta_0$ | 1.0 | 0.5–2.0 | 基本閾値 |
+| $h_0$ | 0.2 | 0.05–0.5 | 跳躍のベース強度 |
+| $\gamma$ | 0.8 | 0.4–1.5 | 発火曲線の鋭さ |
+| $T_0$ | 0.3 | 0.1–0.7 | 探索温度の下限 |
+| $\sigma$ | 0.2 | 0.05–0.5 | ノイズ幅 |
+
+*数値は目安。ゲーム速度やフレームレートに合わせてスケーリングが必要。*
+
+---
+
+## 12. 次の拡張方向
+
+### 12.1. より複雑な現象への対応
+
+- **多体相互作用**：Hawkes過程による社会的カスケード
+- **相転移表示**：ランドウ自由エネルギー $F_S(\phi; p)$ による状態遷移
+- **階層構造**：SSD四層（物理・基層・中核・上層）の明示的統合
+
+### 12.2. 応用分野の拡張
+
+- **物語生成**：跳躍 = プロット分岐、整合 = 伏線回収の力学
+- **組織学習**：チーム単位での集合的跳躍モデル
+- **進化システム**：遺伝的アルゴリズムとの融合
+
+---
+
+## 結論
+
+本ハイブリッドモデルは、SSDの「整合」と「跳躍」を単一の数理フレームワークで統合することに成功しました。
+
+**核心的achievement：**
+
+1. **決定論と確率論の統合**：整合は決定論的、跳躍は確率論的に扱い、両者を自然に接続
+2. **観測可能な指標**：$E$, $T$, $H(\pi)$ などの KPI により挙動を定量化
+3. **実装レディ**：ゲーム AI や教育システムに直接応用可能な軽量設計
+4. **拡張性**：個人から社会まで、様々なスケールに適用可能
+
+最も重要なのは、このモデルが「創造性」という予測困難な現象を、**制御可能でありながら驚きも提供する**システムとして実装できる道筋を示したことです。
+
+人間の「ひらめき」も AI の「創発」も、この統一的な数理言語で記述し、設計し、改良していくことが可能になるのです。
