--- a/構造主観力学：意味圧とは？.md
+++ b/構造主観力学：意味圧とは？.md
@@ -89,6 +89,5 @@
 ---
 
 ## 関連概念
-- [整合とは何か](./整合とは何か.md)
-- [跳躍とは何か](./跳躍とは何か.md)
-- [構造主観力学 核心理論](./核心理論.md)
+- [整合とは何か](https://github.com/HermannDegner/Structural-Subjectivity-Dynamics/blob/main/%E6%A7%8B%E9%80%A0%E4%B8%BB%E8%A6%B3%E5%8A%9B%E5%AD%A6%EF%BC%9A%E6%95%B4%E5%90%88%E3%81%A8%E3%81%AF%EF%BC%9F.md)
+- [跳躍とは何か](https://github.com/HermannDegner/Structural-Subjectivity-Dynamics/blob/main/%E6%A7%8B%E9%80%A0%E4%B8%BB%E8%A6%B3%E5%8A%9B%E5%AD%A6%EF%BC%9A%E8%B7%B3%E8%BA%8D%E3%81%A8%E3%81%AF%EF%BC%9F.md)
