Correct mean coherence equation formatting
Fix formatting of the mean coherence equation in the document.

--- a/数理モデル/構造主観力学：客観性の定量的評価フレームワーク.md
+++ b/数理モデル/構造主観力学：客観性の定量的評価フレームワーク.md
@@ -31,7 +31,7 @@
 
 主観集合全体の調和の度合いを、**平均整合度** $\kappa_{\text{mean}}$ として以下のように定義する：
 
-$$\kappa_{\text{mean}} = \frac{2}{N(N-1)} \sum_{i<j} C(s_i, s_j)$$
+$\kappa_{\text{mean}} = \frac{2}{N(N-1)} \sum_{i<j} C(s_i, s_j)$
 
 この $\kappa_{\text{mean}}$ は、集合体がどれだけ秩序だった構造を形成しているかを示すマクロな指標であり、その解釈は以下のようになる：
 
