--- a/数理モデル/整合の数理モデル.md
+++ b/数理モデル/整合の数理モデル.md
@@ -106,8 +106,8 @@ $$\frac{d\kappa}{dt} = \eta \cdot \dot{W}_{\text{align}}(t) - \lambda \cdot (\ka
 
 学習曲線の特性を分析できます：
 
-- **初期（低効率）**：$\dot{W}_{\text{align}} > 0$ となりやすく、$\kappa$ が急成長
-- **熟練期（高効率）**：$\dot{W}_{\text{align}} \approx 0$ となり、$\kappa$ の成長が鈍化
+- **初期（低効率）**： $$\dot{W}_{\text{align}} > 0$$ となりやすく、 $\kappa$ が急成長
+- **熟練期（高効率）**： $$\dot{W}_{\text{align}} \approx 0$$ となり、 $\kappa$ の成長が鈍化
 
 **命題**: 構造慣性の成長速度は、効率の向上に伴い緩やかになる。
 
